@@ -21,6 +21,7 @@ export(geneSetDb)
 export(geneSetFeatureStats)
 export(geneSets)
 export(getMSigDBset)
+export(getPanther)
 export(hasGeneSet)
 export(hasGeneSetCollection)
 export(incidenceMatrix)
